<resources>
    <string name="app_name">LibraryOfLibrary</string>
    <string name="desc">红包助手</string>
    <string name="server_return_exception">状态异常</string>
    <string name="internet_exception">网络异常</string>
    <string name="url_error">网络地址错误</string>
    <string name="no_web_service">无法连接到服务器，请检查您的网络连接</string>
    <string name="no_data">暂无数据</string>
    <string name="data_exception">数据异常</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
	<string name="number_letter_pattern">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ</string>
	<string name="telephone_number_pattern">1234567890-();, </string>

    <!-- 微信部分 -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="commonTitle">微信</string>
    <string name="action_search">查找</string>
    <string name="action_add">添加</string>
    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_scan">扫一扫</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_find">发现</string>
    <string name="tab_me">我</string>

    <string name="red_packet">红包助手</string>
    <string name="skip_ads">APP 跳过广告</string>
    <string name="auto_installer">APP 自动安装</string>
    <string name="lab">无障碍实验室</string>
</resources>
