<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/actionbar_search_icon"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_search"/>
<!--     <item -->
<!--         android:id="@+id/action_add" -->
<!--         android:icon="@drawable/actionbar_add_icon" -->
<!--         android:title="@string/action_add"/> -->
    <item
        android:id="@+id/action_group_chat"
        android:icon="@drawable/menu_group_chat_icon"
        android:title="@string/menu_group_chat"/>
    <item
        android:id="@+id/action_addfriend"
        android:icon="@drawable/menu_addfriend_icon"
        android:title="@string/menu_addfriend"/>
    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/menu_scan_icon"
        android:title="@string/menu_scan"/>
    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/menu_feedback_icon"
        android:title="@string/menu_feedback"/>

</menu>